--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - icons/
-    # - icons/
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -89,3 +90,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "images/makeatable.png" 
+  adaptive_icon_background: "images/makeatable.png"
+  adaptive_icon_foreground: "images/makeatable.png"
