--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: font\Poppins-Regular.ttf
+
+
   # fonts:
   #   - family: Schyler
   #     fonts:
