--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -64,7 +64,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - icons/user.svg
+    - icons/home.svg
+    - icons/search.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
