--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
+  glassmorphism: ^3.0.0
+  mirai_dropdown_menu: ^0.0.6+2
 
 dev_dependencies:
   flutter_test:
