--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  otp: ^3.1.4
+  flutter_otp_text_field: ^1.1.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
