--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -36,12 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
-<<<<<<< HEAD
   otp: ^3.1.4
   flutter_otp_text_field: ^1.1.1
-=======
   flutter_launcher_icons: ^0.13.1
->>>>>>> 3cf94a05adedfba3bfc0404f167f13f29cc96193
   get: ^4.6.5
 
 dev_dependencies:
@@ -54,6 +51,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+
+flutter_icons:
+  image_path: "images/makeatable.png"
+  android: true
+  ios: true
   
 
 # For information on the generic Dart part of this file, see the
@@ -68,14 +71,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-<<<<<<< HEAD
      - images/
      - icons/
   #   - images/a_dot_ham.jpeg
-=======
-    - icons/
-    - images/
->>>>>>> 3cf94a05adedfba3bfc0404f167f13f29cc96193
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -102,9 +100,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "images/makeatable.png" 
-  adaptive_icon_background: "images/makeatable.png"
-  adaptive_icon_foreground: "images/makeatable.png"
