--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - icons/user.svg
     - icons/home.svg
     - icons/search.svg
+    - images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
