--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -61,12 +61,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - icons/plus-circle.svg
-    - icons/image.svg
-    - icons/home.svg
-    - icons/clock.svg
-    - icons/user.svg
-    - icons/menu.svg
+    - icons/
+    - images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
