--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   dropdown_search: ^5.0.6
   textfield_datepicker: ^0.2.0
   image_picker: ^1.0.2
+  numberpicker: ^2.1.2
+  lottie: ^2.6.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
