--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   numberpicker: ^2.1.2
   lottie: ^2.6.0
   qr_code_scanner: ^1.0.1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
