--- a/makeatable/pubspec.yaml
+++ b/makeatable/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^2.6.0
   qr_code_scanner: ^1.0.1
   get_storage: ^2.1.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
